# strategy_nautilus_trader

./: .gitignore  README.md  main.py  pyproject.toml
bot/: bot1.py  ema_indicator.py  funding_arbitrage_strategy.py  macd_indicator.py  pivot_point.py
data/: get_sample_data.py  load_csv_data.py
examples/: backtest_crypto_binance.py  backtest_example.py  backtest_funding_arbitrage.py  backtest_with_crypto_csv.py  backtest_with_real_data.py
tools/: catalog.py  download_binance_data.py  download_funding_rate.py  funding_rate_simulator.py  html_report_generator.py
