[project]
name = "strategy-nautilus-trader"
version = "0.1.0"
description = "NautilusTrader strategy lab with EMA/MACD/Camarilla examples, crypto backtests, and report tooling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nautilus-trader>=1.220.0",
    "requests>=2.32.5",
    "pandas>=2.0.0",
    "ccxt>=4.0.0",
]
